replace librespot with spotifyd

--- a/templates/setup.twig
+++ b/templates/setup.twig
@@ -109,8 +109,8 @@
 				</div>
 
 				<div class="form-check">
-					<input type="checkbox" class="form-check-input" name="librespot" id="librespot" value="active" {{ config.software.librespot_active ? 'checked' }}>
-					<label class="form-check-label" for="librespot">Spotify Connect (librespot)</label>
+					<input type="checkbox" class="form-check-input" name="spotifyd" id="spotifyd" value="active" {{ config.software.spotifyd_active ? 'checked' }}>
+					<label class="form-check-label" for="spotifyd">Spotify Connect (spotifyd)</label>
 				</div>
 
 				<div class="form-check">
