--- a/templates/setup.twig
+++ b/templates/setup.twig
@@ -125,6 +125,16 @@
 					</div>
 				</div>
 
+				<div class="form-check">
+					<input type="checkbox" class="form-check-input" name="usbaudio" id="usbaudio" value="active" {{ config.software.usbaudio_active ? 'checked' }}>
+					<label class="form-check-label" for="usbaudio">USB sound card (device mode, experimental)</label>
+				</div>
+				<div class="col-12 bd-callout bd-callout-danger otter-bg-danger" id="usbaudiodiv">
+					<strong>Warning!</strong> USB sound card mode is very experimental. <br>Works on macOS, iOS, Windows. Doesn't work with Linux/snd_usb_audio.<br>
+					Please don't create issues about this. Pull Requests are welcome!<br><br>
+					OtterCast has to resample incoming USB audio to the on-board 48kHz reference. <br>This can cause high CPU load!
+				</div>
+
 				<hr class="my-4">
 
 				<h4 class="mb-3">Line-In Streaming (Snapcast Server)</h4>
@@ -158,6 +168,17 @@
 			}
 		}
 
+		function eval_usbaudio_checkbox()
+		{
+			var usbaudiodiv = $('#usbaudiodiv');
+			if($('#usbaudio').is(':checked'))
+			{
+				usbaudiodiv.show();
+			} else {
+				usbaudiodiv.hide();
+			}
+		}
+
 		$(function()
 		{
 			var snapclienthostdiv = $('#snapclienthostdiv');
@@ -165,6 +186,12 @@
 
 			$('#snapclient').on('change', eval_snapclient_checkbox);
 			eval_snapclient_checkbox(); 
+
+			var usbaudiodiv = $('#usbaudiodiv');
+			usbaudiodiv.hide();
+
+			$('#usbaudio').on('change', eval_usbaudio_checkbox);
+			eval_usbaudio_checkbox(); 
 		});
 	</script>
 {% endblock %}
