Add subwoofer support, cleanup boot/init phase, sensible default volume, waiting for PulseAudio at boot

--- a/templates/setup.twig
+++ b/templates/setup.twig
@@ -71,6 +71,10 @@
 					</div>
 				</div>
 
+				<div class="form-check mt-3">
+					<input type="checkbox" class="form-check-input" name="subwoofer" id="subwoofer" value="active" {{ config.general.subwoofer_active ? 'checked' }}>
+					<label class="form-check-label" for="subwoofer">Enable subwoofer amplifier (experimental, no DSP yet!)</label>
+				</div>
 
 				<hr class="my-4">
 
