templates: make WLAN SSID and PSK optional
OtterCast devices work just fine when used without WLAN on Ethernet only.
Do not force configuration of a WLAN network.

--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -35,7 +35,7 @@
 			</main>
 
 			<footer class="my-5 pt-5 text-muted text-center text-small">
-				<p class="mb-1">&copy; 2020-2024 by<br>Jana Hemsing, Lucia Fauth,<br> Tobias Schramm, Sarah Mädel</p>
+				<p class="mb-1">&copy; 2020-2024 by<br>Jana Hemsing, Lucia Fauth,<br> Annika Schramm, Sarah Mädel</p>
 				<br>
 				<ul class="list-inline">
 					<li class="list-inline-item"><a href="https://cast.otter.jetzt/" target="_blank">Homepage</a></li>
