--- a/templates/setup.twig
+++ b/templates/setup.twig
@@ -83,7 +83,7 @@
 				<div class="row g-3">
 					<div class="col-12">
 						<label for="ssid" class="form-label">Network name (SSID)</label>
-						<input type="text" class="form-control" name="ssid" id="ssid" placeholder="Pretty Fly for a Wi-Fi" value="{{ config.network.wifi_ssid }}" required>
+						<input type="text" class="form-control" name="ssid" id="ssid" placeholder="Pretty Fly for a Wi-Fi" value="{{ config.network.wifi_ssid }}">
 						<div class="invalid-feedback">
 							Please enter a valid network name (SSID).
 						</div>
@@ -91,7 +91,7 @@
 
 					<div class="col-12">
 						<label for="psk" class="form-label">Passphrase (PSK)</label>
-						<input type="password" class="form-control" name="psk" id="psk" placeholder="NeverGonnaGiveYouUp" value="****" required>
+						<input type="password" class="form-control" name="psk" id="psk" placeholder="NeverGonnaGiveYouUp" value="****">
 						<div class="invalid-feedback">
 							Please enter your passphase (PSK).
 						</div>
